[package]
name = "agora"
description = "Talk w/o restrictions"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
authors = ["oliver@wngr.de"]

[dependencies]
anyhow = "1.0.57"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive"] }
libp2p = { version = "0.45.0", features = ["gossipsub", "mdns", "mplex", "noise", "identify", "ping", "tcp-tokio"] }
names = { version = "0.13.0", default-features = false }
serde = { version = "1.0.137", features = ["derive"] }
serde_cbor = "0.11.2"
tokio = { version = "1.19.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
void = "1.0.2"
